# ProjetMajeure4A

./: README.md
Code/: CMakeLists.txt  ReadMe.md
Code/src/: hand_detection.cpp  hand_detection.hpp  main.cpp  scene.cpp  scene.hpp  trackbar.cpp  trackbar.hpp
